# FlappyRL

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: main.h
include/core/: core.h
include/env_flappy/: env_flappy.h
include/render_sdl/: render_sdl.h
include/rl_dqn/: adam.h  dqn_agent.h  network.h  replay_buffer.h  rl_dqn.h
scripts/: README.md
src/: main.cpp
src/app_play/: main.cpp
src/app_train/: main.cpp
src/core/: core.cpp
src/env_flappy/: env_flappy.cpp
src/render_sdl/: render_sdl.cpp
src/rl_dqn/: adam.cpp  dqn_agent.cpp  network.cpp  replay_buffer.cpp  rl_dqn.cpp
tests/: README.md  test_dqn.cpp
